# VectorHighway

./: .gitignore  CMakeLists.txt  README.md  plan.md
.kilo/plans/: 1776551849426-quick-pixel.md  1776559800503-gentle-canyon.md  1776565889199-jolly-rocket.md
include/: AnchorPointGraph.h  AuthManager.h  CommandEvent.h  Environment.h  FlightRecorder.h  Geo.h  GeoUtils.h  HealthMonitor.h  LinkManager.h  LoLConfig.h  MirrorContext.h  Mission.h  PathSmoother.h  Pathfinder.h  Payload.h  Planner.h  ProtocolAdapter.h  SimulationContext.h  TenantManager.h  Types.h  UAV.h  UTMConfig.h  WeatherAPI.h  websockets.h
specs/001-ui-refactor-backend-robust/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-ui-refactor-backend-robust/contracts/: websocket-messages.md
specs/002-military-grade-engine/: data-model.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-military-grade-engine/contracts/: websocket-messages.md
specs/003-navigation-globe-overhaul/: data-model.md  plan.md  quickstart.md  research.md  tasks.md
specs/003-navigation-globe-overhaul/contracts/: pathfinder-api.md  websocket-protocol-v2.1.md
src/: AuthManager.cpp  FlightRecorder.cpp  GeoUtils.cpp  HealthMonitor.cpp  LinkManager.cpp  MAVLinkAdapter.cpp  MirrorContext.cpp  Mission.cpp  Payload.cpp  Planner.cpp  TenantManager.cpp  WeatherAPI.cpp  anchor_point_graph.cpp  exec.cpp  geo_utils.cpp  path_smoother.cpp  src_proto.cpp  tests.cpp  websockets.cpp
web/: package.json
web/src/: useSimulationWebSocket.ts
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/globe/: Globe.tsx
web/src/components/map/: AnchorPointMarker.tsx  ConnectionLines.tsx  DestinationMarker.tsx  Earth.tsx  GlobeBorders.tsx  PathLine.tsx  (+5 more)
web/src/hooks/: useHealthMonitor.ts  useWebSocket.ts
web/src/lib/: constants.ts  geo.ts  types.ts
web/src/store/: useSimulationStore.ts
web/src/styles/: theme.ts
(+26 files in other folders)
